Colocando no Ar

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://seu-usuario.github.io/portfolio-pessoal",
   "name": "portifolio-pessoal",
   "version": "0.1.0",
   "private": true,
